# mwaah

./: .gitignore  AUTHORS.rst  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
mwaacli/: __init__.py  integration_test.py  model.py  mwaa.py
mwaah/: __init__.py  mwaah.py
tests/: integration_test.py  test_integration.py
