[metadata]
name = mwaah
version = 0.1.0
author = Gregory Wiltshire
author_email = mellon.greg@gmail.com
description = Python Client for Apache CLI on AWS Managed Airflow
url = https://github.com/GregoryWiltshire/mwaah

[options]
packages = find:
install_requires =
    apache-airflow-client
    botocore>=1.20.0
    boto3
    requests
    pydantic

[options.packages.find]
exclude = tests

[options.extras_require]
socks = PySocks>=1.5.6, !=1.5.7
